Fixed Leaderboard rankings not overflowing

--- a/ui/src/styles/components/_leaderboard.scss
+++ b/ui/src/styles/components/_leaderboard.scss
@@ -10,7 +10,7 @@
 
     &__button {
       font-weight: 500;
-      width: calc(8.6em / 1.5);
+      width: calc(100% / 3);
       margin: 0;
       padding: 0;
       height: 2em;
@@ -30,7 +30,7 @@
 
   &__loading {
     font-size: 1.5em;
-    height: calc(30.4em / 1.5);
+    height: calc(30.6em / 1.5);
     margin: calc(0.8em / 1.5);
     @include lower(0.2em);
     padding: 5px 10px 0 10px;
@@ -38,12 +38,10 @@
 
   &__rankings {
     font-size: 1.5em;
-    height: calc(30.4em / 1.5);
+    height: calc(30.6em / 1.5);
     margin: calc(0.8em / 1.5);
     @include lower(0.2em);
     overflow: auto;
-    display: flex;
-    flex-direction: column;
     padding: 0;
 
     &__game {
@@ -68,7 +66,6 @@
       &__player,
       &__time {
         font-weight: 500;
-        height: calc(22px / 1.5);
         line-height: 1.4;
       }
     }
